feat: Update app name and improve editor functionality
Refactors the application to use "IZU's Gemini HTML Editor" as the official name across all relevant files, including package.json, index.html, metadata.json, and the main App component.

Introduces several enhancements to the code editor and preview components:
- Adds template loading functionality to the `CodeEditor`.
- Improves the `Preview` component's update logic to prevent full iframe reloads, preserving user focus and cursor position in WYSIWYG mode.
- Enhances the `Preview` component to more robustly handle updates for various HTML inputs, preventing stale content.
- Integrates new hooks for theme management (`useTheme`), persistent string state (`usePersistentStringState`), resizable panes (`useResizablePanes`), and API key management (`useApiKey`) into the `App` component.
- Adds a honeypot field and corresponding change handler to `GeminiControls` for basic spam prevention.
- Introduces a `MIN_SUBMIT_TIME_MS` constant for rate-limiting API submissions.
- Updates imports and references to point to the new `lib/gemini` path for Gemini-related services.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemini-html-editor",
+  "name": "izu's-gemini-html-editor",
   "private": true,
   "version": "0.0.0",
   "type": "module",
